Changes for 2.2.12rc1

New features:
A......... [ZBX-9859] improved performance of screen.get method for an unprivileged user (Sasha)

Bug fixes:
..F....... [ZBX-10319] fixed graphs consuming 100% CPU when given incorrect "stime" parameter in URL (Ivo)
A......... [ZBX-10358] fixed error message in template screen cloning (Oleg)
.......PS. [ZBX-10215] fixed host availability not being updated for connection errors on timeouting items (wiper)
...G...... [ZBX-10313] changed wmi.get[] to accept UTF-8 encoded namespace and WQL query, fixed wmi.get[] to return UTF-8 encoded strings (Sandis)
.......PS. [ZBX-9661] fixed bug when VMware collectors could sometimes use 100% of CPU without processing any data (wiper)
..F....... [ZBX-8635] fixed undefined index in trigger expression constructor popup (Cemeris)
..F....... [ZBX-10155] disallowed creating host prototype triggers without any host:key reference (Cemeris)
..F....... [ZBX-9938] fixed displaying incorrect number of hosts that have acknowledged problematic triggers in dashboard host status widget when "Problem display" is "Unackowledged only" in dashboard filter (Ivo)
A......... [ZBX-10251] fixed "countOutput" calculation in map.get API method (Gunars)
...G...PS. [ZBX-9733] fixed possibility to start several agents on the same port on Windows (asaveljevs)
..F....... [ZBX-9991] fixed functionality that adds last selected host group to new template groups list (Cemeris)
.......PS. [ZBX-10270] fixed HTTP proxy environment variables not being taken into account in Web monitoring (asaveljevs)
A.F....... [ZBX-10232] fixed SQL errors with invalid "year" parameter in IT services report (Gunars)
A.F....... [ZBX-1357] added more details to README file about how to add new language (zalex_ua)
A......... [ZBX-10150] fixed "countOutput" calculation in screen.get API method (Gunars)
..F....... [ZBX-10170] fixed column names vertical rotation in Firefox v43 (Gunars)